syntax = "proto3";

option go_package = "github.com/alizoubair/go-grpc-server/api/user/proto";

import "google/protobuf/timestamp.proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string address = 3;
    string phone = 4;
}

message CreateUserResponse {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email= 3;
    string address = 4;
    string phone = 5;
}

message UpdateUserResponse {
    User user = 1;
}

message User {
    string id = 1;
    string name = 2;
    string email= 3;
    string address = 4;
    string phone = 5;
    google.protobuf.Timestamp updated_at = 6;
    google.protobuf.Timestamp created_at = 7;    
}